storage/media-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: dalaran
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.16.2946
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 568
            runAsGroup: 568
          ports:
            - containerPort: 30113
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /btdownloads
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: media-downloads
        - name: media
          persistentVolumeClaim:
            claimName: media-library
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
    - port: 30113
      targetPort: 30113
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: dalaran
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: radarr
          image: ghcr.io/home-operations/radarr:6.1.1.10317
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 568
            runAsGroup: 568
          ports:
            - containerPort: 30025
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /btdownloads
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: media-downloads
        - name: media
          persistentVolumeClaim:
            claimName: media-library
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - port: 30025
      targetPort: 30025
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        kubernetes.io/hostname: dalaran
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      securityContext:
        fsGroup: 568
      containers:
        - name: plex
          image: plexinc/pms-docker:1.43.0.10492-121068a07
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          ports:
            - containerPort: 32400
              name: http
            - containerPort: 32469
              name: dlna-tcp
            - containerPort: 8324
              name: rover-tcp
            - containerPort: 1900
              protocol: UDP
              name: dlna-udp
            - containerPort: 32410
              protocol: UDP
              name: gdm-1
            - containerPort: 32412
              protocol: UDP
              name: gdm-2
            - containerPort: 32413
              protocol: UDP
              name: gdm-3
            - containerPort: 32414
              protocol: UDP
              name: gdm-4
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config
        - name: media
          persistentVolumeClaim:
            claimName: media-library
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
      name: http
    - port: 32469
      targetPort: 32469
      name: dlna-tcp
    - port: 8324
      targetPort: 8324
      name: rover-tcp
    - port: 1900
      targetPort: 1900
      protocol: UDP
      name: dlna-udp
    - port: 32410
      targetPort: 32410
      protocol: UDP
      name: gdm-1
    - port: 32412
      targetPort: 32412
      protocol: UDP
      name: gdm-2
    - port: 32413
      targetPort: 32413
      protocol: UDP
      name: gdm-3
    - port: 32414
      targetPort: 32414
      protocol: UDP
      name: gdm-4
