storage/plex-ingress-dalaran.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-dalaran
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dalaran
      secretName: plex-dalaran-tls
  rules:
    - host: dalaran
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
